--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+server.port=8080
+spring.datasource.url = jdbc:mysql://localhost:3306/chenmall?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = 666250
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+mybatis.mapper-locations=classpath*:com/mapper/*.xml
