--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/chenmall?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 666250
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:mapper/*.xml - classpath*:com/**/mapper/*.xml
+
+
