--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username = root
 spring.datasource.password = 666250
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
-mybatis.mapper-locations=classpath:mapper/*.xml - classpath*:com/**/mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*.xml
+
 
 
